--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Tyler Peters
+email: tpete751@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal site for Tyler Peters. Tyler's a data engineer with 
+  experience in the mathematical planning space.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://tylerjpeters.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: mathrulesearth
+github_username:  tylerjpeters
+linkedin_username: peterstylerj
 
 # Build settings
 theme: minima
